# rnames

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: staging.yml
app/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/frontend/: package-lock.json  package.json  urls.py  views.py
app/frontend/src/: App.js  index.css  utilities.js
app/main/: celery.py  settings.py  urls.py
app/rnames_api/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  signals.py  urls.py  views.py
app/rnames_api/migrations/: 0001_initial.py  0002_keytimeslice.py  0003_delete_keytimeslice.py  0004_keyabsoluteagevalue.py  0005_alter_userapikey_user.py  0006_remove_keylocation_api_key_and_more.py
app/rnames_app/: binning.py  filters.py  forms.py  models.py  tasks.py  tools.py  urls.py  views.py
app/rnames_app/api/: serializers.py  urls.py  views.py
app/rnames_app/migrations/: 0034_binningscheme_binningschemename_historicalbinningscheme_historicalbinningschemename.py  0035_auto_20220508_1947.py  0036_auto_20220603_1834.py  0037_auto_20220605_1227.py  0037_auto_20220606_1735.py  0038_auto_20220605_1245.py  0038_auto_20220606_1736.py  0038_auto_20220606_1839.py  0039_auto_20220605_1321.py  0039_auto_20220606_1737.py  0039_auto_20220606_1841.py  0040_countrycodes.py  (+18 more)
app/scripts/: entrypoint.prod.sh  entrypoint.sh
dev/: binning.py
docs/: .env.example  country_codes.csv  dev_environment.md  environment_variables.md  testing.md
nginx/: default.conf
(+55 files in other folders)
